test video added

--- a/prototyping/frame_extraction.ipynb
+++ b/prototyping/frame_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b839c250",
    "metadata": {},
    "outputs": [
@@ -318,8 +318,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "9702c559",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted 10 frames to uniform_frames\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def extract_uniform_frames(\n",
+    "    video_path: str, \n",
+    "    output_dir: str = \"uniform_frames\",\n",
+    "    num_frames: int = 10,\n",
+    "    display_time: float = 1.0  # seconds to display each frame if needed\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Extract frames uniformly across the video.\n",
+    "\n",
+    "    Args:\n",
+    "        video_path: Path to video file\n",
+    "        output_dir: Folder to save extracted frames\n",
+    "        num_frames: Total frames to extract\n",
+    "        display_time: Optional, time to display each frame (not for saving)\n",
+    "    \"\"\"\n",
+    "    output_dir = Path(output_dir)\n",
+    "    output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    if not cap.isOpened():\n",
+    "        raise ValueError(f\"Cannot open video: {video_path}\")\n",
+    "    \n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    \n",
+    "    # Calculate frame indices to extract\n",
+    "    step = max(total_frames // num_frames, 1)\n",
+    "    frame_indices = [i*step for i in range(num_frames)]\n",
+    "    \n",
+    "    extracted_frames = []\n",
+    "    for idx, frame_no in enumerate(frame_indices):\n",
+    "        cap.set(cv2.CAP_PROP_POS_FRAMES, frame_no)\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            continue\n",
+    "        # Save frame\n",
+    "        filename = output_dir / f\"frame_{idx:03d}_f{frame_no:06d}.jpg\"\n",
+    "        cv2.imwrite(str(filename), frame, [cv2.IMWRITE_JPEG_QUALITY, 95])\n",
+    "        extracted_frames.append(filename)\n",
+    "        \n",
+    "        # Optional: Display frame for a while\n",
+    "        cv2.imshow(\"Frame\", frame)\n",
+    "        cv2.waitKey(int(display_time * 1000))  # display_time in ms\n",
+    "    \n",
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()\n",
+    "    \n",
+    "    print(f\"Extracted {len(extracted_frames)} frames to {output_dir}\")\n",
+    "    return extracted_frames\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    frames = extract_uniform_frames(\n",
+    "        video_path=\"test_video.mp4\",\n",
+    "        num_frames=10,\n",
+    "        display_time=1.0  # display each frame for 1 second\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "eaffdf1c",
+   "id": "4d0c46da",
    "metadata": {},
    "outputs": [],
    "source": []
