--- a/prototyping/hybrid_detection.ipynb
+++ b/prototyping/hybrid_detection.ipynb
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5b5c1738",
    "metadata": {},
    "outputs": [
@@ -1152,9 +1152,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pytesseract in o:\\redaction_system\\.venv\\lib\\site-packages (0.3.13)\n",
-      "Requirement already satisfied: pillow in o:\\redaction_system\\.venv\\lib\\site-packages (11.3.0)\n",
-      "Requirement already satisfied: packaging>=21.3 in o:\\redaction_system\\.venv\\lib\\site-packages (from pytesseract) (25.0)\n"
+      "Collecting pytesseract\n",
+      "  Using cached pytesseract-0.3.13-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: pillow in o:\\redaction_system\\prototyping\\.venv\\lib\\site-packages (12.0.0)\n",
+      "Requirement already satisfied: packaging>=21.3 in o:\\redaction_system\\prototyping\\.venv\\lib\\site-packages (from pytesseract) (25.0)\n",
+      "Using cached pytesseract-0.3.13-py3-none-any.whl (14 kB)\n",
+      "Installing collected packages: pytesseract\n",
+      "Successfully installed pytesseract-0.3.13\n"
      ]
     },
     {
@@ -1168,7 +1172,7 @@
     }
    ],
    "source": [
-    "# !pip install pytesseract pillow"
+    "!pip install pytesseract pillow"
    ]
   },
   {
@@ -1223,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "c792be5c",
    "metadata": {},
    "outputs": [
@@ -1231,7 +1235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "o:\\REDACTION_SYSTEM\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "o:\\REDACTION_SYSTEM\\prototyping\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
@@ -1349,109 +1353,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cc4c07bb",
+   "execution_count": 14,
+   "id": "d96492e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install opencv-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c2f21266",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "o:\\REDACTION_SYSTEM\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Processing realistic_meeting_recording_keyframe_0000_f000000_t0.00s.jpg...\n",
-      "🔒 Sensitive detected: '1WVibuMEdOfcOXYLWMXpe7' (regex=True, bert=True)\n",
-      "🔒 Sensitive detected: 'sk_live_nmz'y¥2721D]MuCTALOUSZEBXUpDOOFINWa1' (regex=True, bert=True)\n",
-      "🔒 Sensitive detected: 'HHUSnPziepNKI3K5z0dg8cDoEzyPCKEXSOOSPivdEGapZPVAEBIFD' (regex=True, bert=True)\n",
-      "✅ Redacted image saved as O:\\REDACTION_SYSTEM\\prototyping\\redacted_keyframes\\realistic_meeting_recording_keyframe_0000_f000000_t0.00s.jpg\n",
-      "\n",
-      "Processing realistic_meeting_recording_keyframe_0001_f001350_t45.00s.jpg...\n",
-      "✅ Redacted image saved as O:\\REDACTION_SYSTEM\\prototyping\\redacted_keyframes\\realistic_meeting_recording_keyframe_0001_f001350_t45.00s.jpg\n",
-      "\n",
-      "Processing realistic_meeting_recording_keyframe_0002_f003600_t120.00s.jpg...\n",
-      "🔒 Sensitive detected: '1VVibIMEdOfcOXYLWMXpe7' (regex=True, bert=True)\n",
-      "🔒 Sensitive detected: 'R2l1NIB7ali48WNbCSugy' (regex=True, bert=True)\n",
-      "🔒 Sensitive detected: 'sk_live_nmzy¥272ID]MuCTALOU8ZEBXUPCOOFINWa1' (regex=True, bert=True)\n",
-      "🔒 Sensitive detected: 'HHUSnPziepNKI3K5z0dgBcDoEzyPCKEXSOOSPivd' (regex=True, bert=True)\n",
-      "✅ Redacted image saved as O:\\REDACTION_SYSTEM\\prototyping\\redacted_keyframes\\realistic_meeting_recording_keyframe_0002_f003600_t120.00s.jpg\n",
-      "\n",
-      "Processing realistic_meeting_recording_keyframe_0003_f004499_t150.00s.jpg...\n",
-      "🔒 Sensitive detected: '1VVibIMEdOfcOXYLWMXpe7' (regex=True, bert=True)\n",
-      "🔒 Sensitive detected: 'R2l1NIB7ali48WNbCSugy' (regex=True, bert=True)\n",
-      "🔒 Sensitive detected: 'sk_live_nmzy¥272ID]MuCTALOU8ZEBXUpCOOFINWa1' (regex=True, bert=True)\n",
-      "🔒 Sensitive detected: 'HHUSnPziepNKI3KSz0dgBcDoEzyPCKEXSOOSPivd' (regex=True, bert=True)\n",
-      "✅ Redacted image saved as O:\\REDACTION_SYSTEM\\prototyping\\redacted_keyframes\\realistic_meeting_recording_keyframe_0003_f004499_t150.00s.jpg\n"
+      "Found 10 images to redact.\n",
+      "✅ Redacted frame_000_f000000.jpg -> frame_000_f000000.jpg\n",
+      "✅ Redacted frame_001_f000053.jpg -> frame_001_f000053.jpg\n",
+      "✅ Redacted frame_002_f000106.jpg -> frame_002_f000106.jpg\n",
+      "✅ Redacted frame_003_f000159.jpg -> frame_003_f000159.jpg\n",
+      "✅ Redacted frame_004_f000212.jpg -> frame_004_f000212.jpg\n",
+      "✅ Redacted frame_005_f000265.jpg -> frame_005_f000265.jpg\n",
+      "✅ Redacted frame_006_f000318.jpg -> frame_006_f000318.jpg\n",
+      "✅ Redacted frame_007_f000371.jpg -> frame_007_f000371.jpg\n",
+      "✅ Redacted frame_008_f000424.jpg -> frame_008_f000424.jpg\n",
+      "✅ Redacted frame_009_f000477.jpg -> frame_009_f000477.jpg\n"
      ]
     }
    ],
    "source": [
-    "import re\n",
     "import cv2\n",
-    "import torch\n",
     "import pytesseract\n",
     "from pytesseract import Output\n",
-    "from transformers import DistilBertTokenizerFast, DistilBertForSequenceClassification\n",
     "from pathlib import Path\n",
     "\n",
-    "# -----------------------------\n",
-    "# Load trained DistilBERT model\n",
-    "# -----------------------------\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# Reuse your existing functions: is_sensitive_by_regex, is_sensitive_by_bert\n",
     "\n",
-    "model_path = \"./results\"  # replace with your trained model path if different\n",
-    "tokenizer = DistilBertTokenizerFast.from_pretrained(\"distilbert-base-uncased\")\n",
-    "model = DistilBertForSequenceClassification.from_pretrained(model_path)\n",
-    "model.to(device)\n",
-    "model.eval()\n",
-    "\n",
-    "# -----------------------------\n",
-    "# Define regex patterns\n",
-    "# -----------------------------\n",
-    "regex_patterns = {\n",
-    "    \"aws_access\": r'\\bAKIA[0-9A-Z]{16}\\b',\n",
-    "    \"aws_secret\": r'\\b[A-Za-z0-9/+=]{40}\\b',\n",
-    "    \"email\": r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b',\n",
-    "    \"ssn\": r'\\b\\d{3}-\\d{2}-\\d{4}\\b',\n",
-    "    \"credit_card\": r'\\b(?:\\d[ -]*?){13,16}\\b',\n",
-    "    \"phone\": r'\\+?\\d[\\d\\s-]{7,}\\d',\n",
-    "    \"api_key\": r'\\b[A-Za-z0-9]{20,}\\b'\n",
-    "}\n",
-    "\n",
-    "def is_sensitive_by_regex(text):\n",
-    "    \"\"\"Check if any regex pattern matches the text.\"\"\"\n",
-    "    for label, pattern in regex_patterns.items():\n",
-    "        if re.search(pattern, text):\n",
-    "            return True\n",
-    "    return False\n",
-    "\n",
-    "# -----------------------------\n",
-    "# DistilBERT prediction helper\n",
-    "# -----------------------------\n",
-    "def is_sensitive_by_bert(text):\n",
-    "    \"\"\"Use DistilBERT to classify sensitivity.\"\"\"\n",
-    "    if not text.strip():\n",
-    "        return False\n",
-    "    enc = tokenizer(text, truncation=True, padding=True, return_tensors=\"pt\").to(device)\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(**enc)\n",
-    "        pred = torch.argmax(outputs.logits, dim=-1).item()\n",
-    "    return bool(pred)  # 1 = sensitive, 0 = non-sensitive\n",
-    "\n",
-    "# -----------------------------\n",
-    "# OCR + Blur Pipeline\n",
-    "# -----------------------------\n",
-    "def redact_image(image_path, output_path=\"redacted_output.png\", blur_strength=(51, 51)):\n",
-    "    img = cv2.imread(image_path)\n",
-    "    if img is None:\n",
-    "        raise FileNotFoundError(f\"Could not load image: {image_path}\")\n",
-    "\n",
+    "def redact_image_cv(img, blur_strength=(51, 51)):\n",
+    "    \"\"\"Redact sensitive text in a single image array and return the redacted image.\"\"\"\n",
     "    ocr_data = pytesseract.image_to_data(img, output_type=Output.DICT)\n",
     "\n",
     "    sensitive_indices = []\n",
@@ -1460,14 +1403,9 @@
     "        if not text:\n",
     "            continue\n",
     "\n",
-    "        # Check both regex and model\n",
-    "        regex_flag = is_sensitive_by_regex(text)\n",
-    "        bert_flag = is_sensitive_by_bert(text)\n",
-    "\n",
-    "        # ✅ Blur only when BOTH regex and BERT agree\n",
-    "        if regex_flag and bert_flag:\n",
+    "        # Check both regex and BERT\n",
+    "        if is_sensitive_by_regex(text) and is_sensitive_by_bert(text):\n",
     "            sensitive_indices.append(i)\n",
-    "            print(f\"🔒 Sensitive detected: '{text}' (regex={regex_flag}, bert={bert_flag})\")\n",
     "\n",
     "    # Apply Gaussian blur to sensitive regions\n",
     "    for i in sensitive_indices:\n",
@@ -1477,41 +1415,38 @@
     "            roi = img[y:y+h, x:x+w]\n",
     "            blurred_roi = cv2.GaussianBlur(roi, blur_strength, 30)\n",
     "            img[y:y+h, x:x+w] = blurred_roi\n",
+    "    return img\n",
     "\n",
-    "    cv2.imwrite(output_path, img)\n",
-    "    print(f\"✅ Redacted image saved as {output_path}\")\n",
+    "def redact_all_images(input_dir=\"uniform_frames\", output_dir=\"redacted_uniform_frames\"):\n",
+    "    input_dir = Path(input_dir)\n",
+    "    output_dir = Path(output_dir)\n",
+    "    output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    image_files = sorted(input_dir.glob(\"*.jpg\"))  # assumes frames are .jpg\n",
+    "    print(f\"Found {len(image_files)} images to redact.\")\n",
+    "\n",
+    "    for img_path in image_files:\n",
+    "        img = cv2.imread(str(img_path))\n",
+    "        if img is None:\n",
+    "            print(f\"⚠️ Could not load {img_path}, skipping.\")\n",
+    "            continue\n",
+    "\n",
+    "        redacted_img = redact_image_cv(img)\n",
+    "        output_path = output_dir / img_path.name\n",
+    "        cv2.imwrite(str(output_path), redacted_img)\n",
+    "        print(f\"✅ Redacted {img_path.name} -> {output_path.name}\")\n",
     "\n",
     "# -----------------------------\n",
-    "# Batch process folder of images\n",
-    "# -----------------------------\n",
-    "def redact_images_in_folder(input_folder, output_folder, blur_strength=(51, 51)):\n",
-    "    input_folder = Path(input_folder)\n",
-    "    output_folder = Path(output_folder)\n",
-    "    output_folder.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "    image_files = [f for f in input_folder.iterdir() if f.suffix.lower() in ['.png', '.jpg', '.jpeg', '.bmp']]\n",
-    "\n",
-    "    for img_file in image_files:\n",
-    "        try:\n",
-    "            output_path = output_folder / img_file.name\n",
-    "            print(f\"\\nProcessing {img_file.name}...\")\n",
-    "            redact_image(str(img_file), str(output_path), blur_strength)\n",
-    "        except Exception as e:\n",
-    "            print(f\"❌ Error processing {img_file.name}: {e}\")\n",
-    "\n",
-    "# -----------------------------\n",
-    "# Run the pipeline\n",
+    "# Run on all frames\n",
     "# -----------------------------\n",
     "if __name__ == \"__main__\":\n",
-    "    keyframes_dir = r\"O:\\REDACTION_SYSTEM\\prototyping\\keyframes_output\"\n",
-    "    redacted_dir = r\"O:\\REDACTION_SYSTEM\\prototyping\\redacted_keyframes\"\n",
-    "    redact_images_in_folder(keyframes_dir, redacted_dir)\n"
+    "    redact_all_images(\"uniform_frames\", \"redacted_uniform_frames\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9031b4d",
+   "id": "70938263",
    "metadata": {},
    "outputs": [],
    "source": []
