uniform frame extraction added

--- a/prototyping/hybrid_detection.ipynb
+++ b/prototyping/hybrid_detection.ipynb
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "c792be5c",
    "metadata": {},
    "outputs": [
@@ -1445,8 +1445,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "a479ba49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 10 images to redact.\n",
+      "✅ Redacted frame_000_f000000.jpg -> frame_000_f000000.jpg\n",
+      "✅ Redacted frame_001_f000039.jpg -> frame_001_f000039.jpg\n",
+      "✅ Redacted frame_002_f000078.jpg -> frame_002_f000078.jpg\n",
+      "✅ Redacted frame_003_f000117.jpg -> frame_003_f000117.jpg\n",
+      "✅ Redacted frame_004_f000156.jpg -> frame_004_f000156.jpg\n",
+      "✅ Redacted frame_005_f000195.jpg -> frame_005_f000195.jpg\n",
+      "✅ Redacted frame_006_f000234.jpg -> frame_006_f000234.jpg\n",
+      "✅ Redacted frame_007_f000273.jpg -> frame_007_f000273.jpg\n",
+      "✅ Redacted frame_008_f000312.jpg -> frame_008_f000312.jpg\n",
+      "✅ Redacted frame_009_f000351.jpg -> frame_009_f000351.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import pytesseract\n",
+    "from pytesseract import Output\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Reuse your existing functions: is_sensitive_by_regex, is_sensitive_by_bert\n",
+    "\n",
+    "def redact_image_cv(img, blur_strength=(51, 51)):\n",
+    "    \"\"\"Redact sensitive text in a single image array and return the redacted image.\"\"\"\n",
+    "    ocr_data = pytesseract.image_to_data(img, output_type=Output.DICT)\n",
+    "\n",
+    "    sensitive_indices = []\n",
+    "    for i, word in enumerate(ocr_data['text']):\n",
+    "        text = word.strip()\n",
+    "        if not text:\n",
+    "            continue\n",
+    "\n",
+    "        # Check both regex and BERT\n",
+    "        if is_sensitive_by_regex(text) and is_sensitive_by_bert(text):\n",
+    "            sensitive_indices.append(i)\n",
+    "\n",
+    "    # Apply Gaussian blur to sensitive regions\n",
+    "    for i in sensitive_indices:\n",
+    "        x, y, w, h = (ocr_data['left'][i], ocr_data['top'][i], \n",
+    "                      ocr_data['width'][i], ocr_data['height'][i])\n",
+    "        if w > 0 and h > 0:\n",
+    "            roi = img[y:y+h, x:x+w]\n",
+    "            blurred_roi = cv2.GaussianBlur(roi, blur_strength, 30)\n",
+    "            img[y:y+h, x:x+w] = blurred_roi\n",
+    "    return img\n",
+    "\n",
+    "def redact_all_images(input_dir=\"uniform_frames\", output_dir=\"redacted_uniform_frames\"):\n",
+    "    input_dir = Path(input_dir)\n",
+    "    output_dir = Path(output_dir)\n",
+    "    output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    image_files = sorted(input_dir.glob(\"*.jpg\"))  # assumes frames are .jpg\n",
+    "    print(f\"Found {len(image_files)} images to redact.\")\n",
+    "\n",
+    "    for img_path in image_files:\n",
+    "        img = cv2.imread(str(img_path))\n",
+    "        if img is None:\n",
+    "            print(f\"⚠️ Could not load {img_path}, skipping.\")\n",
+    "            continue\n",
+    "\n",
+    "        redacted_img = redact_image_cv(img)\n",
+    "        output_path = output_dir / img_path.name\n",
+    "        cv2.imwrite(str(output_path), redacted_img)\n",
+    "        print(f\"✅ Redacted {img_path.name} -> {output_path.name}\")\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Run on all frames\n",
+    "# -----------------------------\n",
+    "if __name__ == \"__main__\":\n",
+    "    redact_all_images(\"uniform_frames2\", \"redacted_uniform_frames2\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "70938263",
+   "id": "a3ae7cf5",
    "metadata": {},
    "outputs": [],
    "source": []
